Fix whitespace, hiding

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -899,9 +899,6 @@ body {
     
     tbody {
       border-top: 0px !important;
-      &.side {
-        display: none;
-      }
     }
 
     th {
